# pm-skill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: features.md  quick-start.md
docs/i18n/: README.es.md  README.ja.md  README.ko.md  README.ru.md  README.tr.md  README.zh-CN.md  README.zh-TW.md
src/pm_skill/: __init__.py  api.py  cli.py  command_router.py  commands.py  frontmatter_io.py  git_client.py  json_io.py  mcp_server.py  models.py  paths.py  policy.py  pydantic_models.py  runtime.py  schemas.py  scope.py
tests/: test_pm_skill.py
